[#23352] Text alignment issues at Pre-Installation check screen
git-svn-id: http://joomlacode.org/svn/joomla/development/trunk@19533 6f6e1ebd-4c2b-0410-823f-f34bde69bce9

--- a/installation/template/css/template.css
+++ b/installation/template/css/template.css
@@ -59,7 +59,7 @@ td:first-child {
 }
 
 td.item + td {
-	text-align: center;
+	text-align: left;
 }
 
 /* installer */
