--- a/installation/template/css/template_rtl.css
+++ b/installation/template/css/template_rtl.css
@@ -67,3 +67,7 @@ h3.moofx-toggler-down {
 #srcEncoding{
 	text-align: right;
 }
+
+td.item + td {
+	text-align: right;
+}
